name:           TimeMachineStore
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Elad

executable TimeMachineStore
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   containers >=0.5 && <0.6,
                   persistent >=2.1 && <2.2
  ghc-options:     -Wall

